--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="./assets/css/global.css" />
   </head>
   <body>
-    <h1>heading</h1>
-    <p>paragraph1 test dev edited</p>
-    <div>
-      <a>Link</a>
-    </div>
+    <header>
+      <a href="/">SONICJIVE</a>
+      <nav>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
