--- a/index.html
+++ b/index.html
@@ -7,18 +7,181 @@
     <link rel="stylesheet" href="./assets/css/global.css" />
   </head>
   <body>
-    <header>
+    <!-- <img src="./assets/images/banner-bg.svg" class="bg" alt="hero" /> -->
+
+    <header class="container">
       <a href="/">SONICJIVE</a>
       <nav>
         <ul>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Reviews</a></li>
+          <li><a href="#">About Us</a></li>
         </ul>
       </nav>
+
+      <div class="action-group">
+        <ul>
+          <li>
+            <img src="./assets/icons/search.svg" alt="search" />
+          </li>
+          <li>
+            <img src="./assets/icons/basket.svg" alt="basket" />
+          </li>
+          <li>
+            <img src="./assets/images/user.png" alt="user" />
+          </li>
+        </ul>
+      </div>
     </header>
-    <main></main>
+    <main class="container">
+      <section class="hero-banner">
+        <img
+          class="hero-banner__img"
+          src="./assets/images/banner-img.png"
+          alt="hero"
+        />
+        <div class="hero-banner__content">
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+           <div></div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+           <div>
+             <div>
+                 <div></div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+             </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+           </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+           </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+
+           </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+
+           </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+
+           </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+
+           </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
+            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
+            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+          </div>
+        </div>
+        <div class="hero-banner__tag">9.5K Products</div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
