--- a/index.html
+++ b/index.html
@@ -41,142 +41,27 @@
           src="./assets/images/banner-img.png"
           alt="hero"
         />
-        <div class="hero-banner__content">
-          <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-           <div></div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-           <div>
+        <div class="hero-banner__content_left">
+         <p>Immerse in Nature's Sounds with </p>
+         <h1 class="name">SonicJive Earbuds.</h1>
+         <p1>At SonicJive, we believe that technology and nature can coexist harmoniously. Our mission is to provide you with earbuds that offer exceptional sound quality while respecting our planet's delicate ecosystem. </p1>
+        <br><span>Price:</span>$45:00</span>  
+        <br><button class="order">Order Now</button>
+        </div>
+           <br>
+    
+          
+           <div class="hero-banner__content_right">
+            <text>Driver Size</text>
+           <br> <p1>This is the size of the speaker driver in each earbud, typically measured in millimeters (mm)</p1>
+            <div>
+              <text>Frequency Response</text>
+            <br>  <p1>The range of frequencies (measured in Hertz, Hz) that the earbuds can reproduce. </p1>
+            </div>
+            <text>Sensitivity</text>
+           <br> <p1>Sensitivity is measured in decibels (dB) and indicates how loud the earbuds.</p1>
              <div>
-                 <div></div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-           </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-           </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-
-           </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-
-           </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-
-           </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-          </div>
-
-           </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            possimus sit earum ipsum. Suscipit in illo dicta sequi, nihil alias?
-            Ratione, reprehenderit recusandae labore assumenda ad quasi odio
-            laboriosam, officiis vero dolor qui impedit fuga, quia expedita!
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
-            Dolores, voluptatibus aperiam. Dolores, voluptatibus aperiam.
+                 <div>
           </div>
         </div>
         <div class="hero-banner__tag">9.5K Products</div>
