chore: some notes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,30 @@
           <div class="hero-banner__tag"><b>9.5K</b><span>Products</span></div>
         </div>
       </section>
+
+      <section class="block-box">
+        <div>Image</div>
+        <div>Content</div>
+      </section>
+
+      <section class="block-box block-box__right">
+        <div>Image</div>
+        <div>Content</div>
+      </section>
+
+      <section style="height: 500px; position: relative">
+        <div class="dots">
+          <span></span><span class="active"></span><span></span><span></span>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <a href="#" class="footer-link">
+          <img src="./assets/icons/ch-play.svg" alt="ch-play" />
+          <span>Google Play</span>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
