--- a/index.html
+++ b/index.html
@@ -91,14 +91,103 @@
         </div>
       </section>
 
+      <section class="stats">
+        <div class="stats_title">
+          <div>
+            <span class="stats_title--number">10+</span
+            ><span class="stats_title--small">Service Geographics</span>
+          </div>
+          <div class="active">
+            <span class="stats_title--number">30M+</span
+            ><span class="stats_title--small">Fortune Clients</span>
+          </div>
+          <div>
+            <span class="stats_title--number">10k+</span
+            ><span class="stats_title--small">Sales Per month</span>
+          </div>
+          <div>
+            <span class="stats_title--number">20+</span
+            ><span class="stats_title--small">Years of Journey</span>
+          </div>
+        </div>
+      </section>
+
+      <section class="wcu">
+        <div class="wcu_title">
+          <h5>Why Choose Us</h5>
+          <p>
+            At SonicJive, we believe that technology and nature can coexist
+            harmoniously. Our mission is to provide you with earbuds that offer
+            exceptional sound quality while respecting our planet's delicate
+            ecosystem.
+          </p>
+        </div>
+        <div class="wcu_content">
+          <img src="./assets/images/wcu.png" alt="hero" />
+        </div>
+        <div class="wcu_content-left">
+          <div>
+            <h6>Sound quality</h6>
+            <p>Premium sound quality and comfort.</p>
+          </div>
+
+          <div>
+            <h6>Battery Life</h6>
+            <p>Long-lasting earbuds battery life.</p>
+          </div>
+          <div class="wcu_content-right">
+            <div>
+              <h6>Sustainable</h6>
+              <p>Sustainable materials and eco-friendly.</p>
+            </div>
+
+            <div>
+              <h6>Technology</h6>
+              <p>Premium sound quality and comfort.</p>
+            </div>
+          </div>
+          <button class="btn btn__lg btn--rounded">Discover</button>
+        </div>
+      </section>
+
       <section class="block-box">
-        <div>Image</div>
-        <div>Content</div>
+        <div>
+          <img
+            class="block-box--img"
+            src="./assets/images/blockboxleft.png"
+            alt="hero"
+          />
+        </div>
+        <div class="block-box--content">
+          <h7>Immersive Sound Quality </h7>
+          <p>
+            Our earbuds are designed to provide an exceptional audio experience.
+            With high-quality drivers and advanced sound processing, you can
+            enjoy crystal-clear sound, deep bass, and immersive music or calls.
+            These earbuds are meticulously crafted for comfort and secure fit.
+            The ergonomic design ensures they stay in place during workouts,
+            commutes, or daily activities.
+          </p>
+          <button class="btn btn__lg btn--rounded">Discover</button>
+        </div>
       </section>
 
       <section class="block-box block-box__right">
-        <div>Image</div>
-        <div>Content</div>
+        <div>
+          <img
+            class="block-box--rightimg"
+            src="./assets/images/blockboxright.png"
+            alt="hero"
+          />
+        </div>
+        <div class="block-box--content">
+          <h7>Wireless Freedom & Long Term Battery</h7>
+          <p>
+            Say goodbye to tangled wires. Our earbuds offer the convenience of Bluetooth connectivity, giving you the freedom to move without restrictions.You won't have to worry about running out of power. These earbuds come with a long-lasting battery that keeps you entertained or connected for hours on a single charge.
+          </p>
+          <button class="btn btn__lg btn--rounded">Discover</button>
+        </div>
+      </section>
       </section>
 
       <section style="height: 500px; position: relative">
