feat:why choose us

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <section class="wcu">
         <div class="wcu_title">
-          <h5>Why Choose Us</h5>
+          <h2>Why Choose Us</h2>
           <p>
             At SonicJive, we believe that technology and nature can coexist
             harmoniously. Our mission is to provide you with earbuds that offer
@@ -122,44 +122,57 @@
             ecosystem.
           </p>
         </div>
-        <div class="wcu_content">
+
+        <!-- <div class="wcu_image">
           <img src="./assets/images/wcu.png" alt="hero" />
-        </div>
-        <div class="wcu_content-left">
-          <div>
-            <h6>Sound quality</h6>
-            <p>Premium sound quality and comfort.</p>
-          </div>
+        </div> -->
 
+        <div class="wcu-content">
           <div>
-            <h6>Battery Life</h6>
-            <p>Long-lasting earbuds battery life.</p>
-          </div>
-          <div class="wcu_content-right">
             <div>
-              <h6>Sustainable</h6>
-              <p>Sustainable materials and eco-friendly.</p>
-            </div>
-
-            <div>
-              <h6>Technology</h6>
+              <h3>Sound quality</h3>
               <p>Premium sound quality and comfort.</p>
             </div>
           </div>
+
+          <div>
+            <div>
+              <h3>Sustainable</h3>
+              <p>Sustainable materials and eco-friendly.</p>
+            </div>
+          </div>
+
+          <div>
+            <div>
+              <h3>Battery Life</h3>
+              <p>Long-lasting earbuds battery life.</p>
+            </div>
+          </div>
+
+          <div>
+            <div>
+              <h3>Technology</h3>
+              <p>Premium sound quality and comfort.</p>
+            </div>
+          </div>
+
+          <span class="wcu-content__tag">
+            <b>10+</b>
+            <small>Services</small>
+          </span>
+        </div>
+
+        <div class="wcu-action">
           <button class="btn btn__lg btn--rounded">Discover</button>
         </div>
       </section>
 
       <section class="block-box">
-        <div>
-          <img
-            class="block-box--img"
-            src="./assets/images/blockboxleft.png"
-            alt="hero"
-          />
+        <div class="block-box__img">
+          <img src="./assets/images/blockboxleft.png" alt="hero" />
         </div>
-        <div class="block-box--content">
-          <h7>Immersive Sound Quality </h7>
+        <div class="block-box__content">
+          <h4>Immersive Sound Quality</h4>
           <p>
             Our earbuds are designed to provide an exceptional audio experience.
             With high-quality drivers and advanced sound processing, you can
@@ -173,6 +186,24 @@
       </section>
 
       <section class="block-box block-box__right">
+        <div class="block-box__img">
+          <img src="./assets/images/blockboxleft.png" alt="hero" />
+        </div>
+        <div class="block-box__content">
+          <h4>Immersive Sound Quality</h4>
+          <p>
+            Our earbuds are designed to provide an exceptional audio experience.
+            With high-quality drivers and advanced sound processing, you can
+            enjoy crystal-clear sound, deep bass, and immersive music or calls.
+            These earbuds are meticulously crafted for comfort and secure fit.
+            The ergonomic design ensures they stay in place during workouts,
+            commutes, or daily activities.
+          </p>
+          <button class="btn btn__lg btn--rounded">Discover</button>
+        </div>
+      </section>
+
+      <!-- <section class="block-box block-box__right">
         <div>
           <img
             class="block-box--rightimg"
@@ -194,7 +225,7 @@
         <div class="dots">
           <span></span><span class="active"></span><span></span><span></span>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer>
       <div>
