--- a/index.html
+++ b/index.html
@@ -187,45 +187,90 @@
 
       <section class="block-box block-box__right">
         <div class="block-box__img">
-          <img src="./assets/images/blockboxleft.png" alt="hero" />
+          <img src="./assets/images/blockboxright.png" alt="hero" />
         </div>
         <div class="block-box__content">
-          <h4>Immersive Sound Quality</h4>
+          <h4>Wireless Freedom & Long Term Battery</h4>
           <p>
-            Our earbuds are designed to provide an exceptional audio experience.
-            With high-quality drivers and advanced sound processing, you can
-            enjoy crystal-clear sound, deep bass, and immersive music or calls.
-            These earbuds are meticulously crafted for comfort and secure fit.
-            The ergonomic design ensures they stay in place during workouts,
-            commutes, or daily activities.
+            Say goodbye to tangled wires. Our earbuds offer the convenience of
+            Bluetooth connectivity, giving you the freedom to move without
+            restrictions.You won't have to worry about running out of power.
+            These earbuds come with a long-lasting battery that keeps you
+            entertained or connected for hours on a single charge.
           </p>
           <button class="btn btn__lg btn--rounded">Discover</button>
         </div>
       </section>
 
-      <!-- <section class="block-box block-box__right">
-        <div>
-          <img
-            class="block-box--rightimg"
-            src="./assets/images/blockboxright.png"
-            alt="hero"
-          />
+      <section class="block-box block-box__left">
+        <div class="block-box__img left">
+          <img src="./assets/images/blockboxleft1.png" alt="hero" />
         </div>
-        <div class="block-box--content">
-          <h7>Wireless Freedom & Long Term Battery</h7>
+        <div class="block-box__content">
+          <h4>Intuitive Touch Controls</h4>
           <p>
-            Say goodbye to tangled wires. Our earbuds offer the convenience of Bluetooth connectivity, giving you the freedom to move without restrictions.You won't have to worry about running out of power. These earbuds come with a long-lasting battery that keeps you entertained or connected for hours on a single charge.
+            Easily manage your music, answer calls, and control voice assistants
+            with just a touch. It's all about convenience at your fingertips.
+            Immerse yourself in your music or work with our advanced
+            noise-canceling technology. Block out distractions and enjoy a
+            peaceful audio experience.
           </p>
           <button class="btn btn__lg btn--rounded">Discover</button>
         </div>
       </section>
+
+      <section class="review">
+        <div class="customer">
+          <h5>What does our customer say?</h5>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui
+            blanditiis praesentium voluptatum deleniti atque corrupti quos
+            dolores.
+          </p>
+        </div>
+
+        <div class="review-content">
+          <div class="cus-review">
+            <img src="./assets/images/left-pic.png" alt="picleft" />
+            <h6>Irene Strong</h6>
+            <p>
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+
+          <div class="cus-review review-left">
+            <img src="./assets/images/right-pic.png" alt="picright" />
+            <h6>Jonas Kakaroto</h6>
+            <p>
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+
+          <div class="dots">
+            <span></span><span class="active"></span><span></span><span></span>
+          </div>
+        </div>
       </section>
 
-      <section style="height: 500px; position: relative">
-        <div class="dots">
-          <span></span><span class="active"></span><span></span><span></span>
+      <section class="subcribe">
+        <div class="subImg">
+          <img src="./assets/images/subimg.png" alt="subcribe" />
         </div>
-      </section> -->
+
+        <div class="subcribe-content">
+          <h6>Subscribe To Our Newsletter</h6>
+          <p>
+            Sign up for to get daily updates & news about our new products and
+            features.
+          </p>
+          <div class="email">
+            <input type="text" id="sub-text" placeholder="@Enter your email" />
+            <button class="btn btn__sm">Subcribe</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div>
