feat:footer layout

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </section>
 
       <section class="block-box block-box__left">
-        <div class="block-box__img left">
+        <div class="block-box__img intuitive-image">
           <img src="./assets/images/blockboxleft1.png" alt="hero" />
         </div>
         <div class="block-box__content">
@@ -272,13 +272,22 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div>
+    <footer class="container">
+      <div class="footer-left">
+        <a href="#" class="footer-left__logo">SONICJIVE</a>
+      </div>
+      <div class="footer-right">
+        <div>column 1</div>
+        <div>column 2</div>
+        <div>column 3</div>
+        <div>column 4</div>
+      </div>
+      <!-- <div>
         <a href="#" class="footer-link">
           <img src="./assets/icons/ch-play.svg" alt="ch-play" />
           <span>Google Play</span>
         </a>
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
