--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/global.css" />
+
+    <link
+      rel="shortcut icon"
+      href="./assets/images/user.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- <img src="./assets/images/banner-bg.svg" class="bg" alt="hero" /> -->
