--- a/index.html
+++ b/index.html
@@ -278,22 +278,58 @@
         </div>
       </section>
     </main>
+
+
     <footer class="container">
       <div class="footer-left">
         <a href="#" class="footer-left__logo">SONICJIVE</a>
+        <p>Info@besnik.agency</p>
+        <p>+458 843 5849</p>
       </div>
       <div class="footer-right">
-        <div>column 1</div>
-        <div>column 2</div>
-        <div>column 3</div>
-        <div>column 4</div>
-      </div>
-      <!-- <div>
-        <a href="#" class="footer-link">
+        <div>
+          <h6>Blog</h6>
+          <p>Company</p>
+          <p>Career</p>
+          <p>Mobile</p>
+          <p>How it works</p>
+        </div>
+        <div>
+          <h6>About</h6>
+          <p>Contacts</p>
+          <p>About us</p>
+          <p>FAQ</p>
+          <p>Our Team</p>
+          <p>Terms of service</p>
+        </div>
+        <div>
+          <h6>Product</h6>
+          <p>Terms of use</p>
+          <p>Privacy policy</p>
+          <p>Log in</p>
+        </div>
+        <div>
+          <h6>Download App</h6>
+
+          <a href="#" class="footer-link">
           <img src="./assets/icons/ch-play.svg" alt="ch-play" />
-          <span>Google Play</span>
-        </a>
-      </div> -->
+          <p>Google Play</p>
+
+          <a href="#" class="footer-link">
+            <img src="./assets/icons/apple.svg" alt="apple" />
+            <p>Apple Store</p>
+
+          <a href="#" class="footer-link">
+              <img src="./assets/icons/desktop.svg" alt="desktop" />
+              <p>Desktop</p>
+          </div>
+
+      </div>
     </footer>
+    <div class="footer-bottom">
+      <a href="#" class="link-bottom">
+        <img src="./assets/icons/Social media icon.svg" alt="Social Media Icon" />
+        <p>©2021 puffnest.sofas Ltd.</p>
+    </div>
   </body>
 </html>
